General Fixes
- Finalised the fix to the problem that the spectrogram fails to show occasionally
- Added a way to get back to the main page from the transcription page
- Removed some proposed fixes as they are intentional:
    - "fix the C0 and B9 going off screen"
    - "fix height of transcriber area not being the same as the sidebar height"

--- a/app/static/resources/css/transcriber.css
+++ b/app/static/resources/css/transcriber.css
@@ -23,6 +23,11 @@ hr {
     background-color: #e0e0e0;
 }
 
+.main-header {
+    text-decoration: none;
+    color: black;
+}
+
 /* Texts */
 .error-text {
     color: #ff6978;
